wwwroot/css/file-pdf-preview.css
main {
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 6em);
    margin-bottom: 3em;
}

.max-width-set {
    max-width: var(--max-width);
    margin-left: auto;
    margin-right: auto;
}

@media (hover: none) and (pointer: coarse) {
    main {
        min-height: calc(100dvh - 6em);
    }
}

.pdf-canvas-container {
    margin: 0 auto;
    flex-grow: 1;
    display: grid;
    place-items: center;
    filter: invert(var(--canvas-invert));
    transition: filter var(--animation-time);
}

#pdf-canvas {
    width: 100%;
}

h3 {
    text-align: center;
}

